--- a/ITDeskClient/src/app/components/layout/layout.component.html
+++ b/ITDeskClient/src/app/components/layout/layout.component.html
@@ -4,7 +4,7 @@
             <img src="https://primefaces.org/cdn/primeng/images/primeng.svg" height="40" class="mr-2" />
         </ng-template>
         <ng-template pTemplate="end">
-            <p-button label="Çıkış Yap" icon="pi pi-fw pi-power-off" [text]="true" severity="secondary" (click)="logout()"></p-button>
+            <p-button [label]="auth.token.name" icon="pi pi-fw pi-power-off" [text]="true" severity="secondary" (click)="logout()"></p-button>
         </ng-template>
     </p-menubar>
 </div>
