--- a/ITDeskClient/src/app/components/home/home.component.html
+++ b/ITDeskClient/src/app/components/home/home.component.html
@@ -5,11 +5,13 @@
 <div class="card mt-2">
     <ag-grid-angular 
     class="ag-theme-quartz" 
-    style="width: 100%; height: 550px;" 
+    style="width: 100%; height: 750px;" 
     [rowData]="tickets"
     [columnDefs]="colDefs"
     [pagination]="true"
-    [paginationPageSize]="10"
-    [autoSizeStrategy]="autoSizeStrategy">
+    [paginationPageSize]="20"
+    [defaultColDef]="defaultColDef"
+    [autoSizeStrategy]="autoSizeStrategy"
+    [components]="frameworkComponents">
 </ag-grid-angular>
 </div>
