--- a/ITDeskClient/src/app/components/detail/detail.component.html
+++ b/ITDeskClient/src/app/components/detail/detail.component.html
@@ -7,15 +7,16 @@
             <div class="row g-0">
                 <div class="col-12 col-lg-12 col-xl-12">
                     <div class="py-2 px-4 border-bottom d-none d-lg-block">
-                        <div class="d-flex align-items-center py-1">
-                            <div class="position-relative">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                                    class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
-                            </div>
-                            <div class="flex-grow-1 pl-3 ms-2">
-                                <strong>Sharon Lessman</strong>
-                                <div class="text-muted small"></div>
-                            </div>
+                        <div class="d-flex justify-content-between py-1">
+                            <b>
+                                Owner: {{ticket.appUser.firstName}} {{ticket.appUser.lastName}}
+                            </b>
+                            <b>
+                                Subject: {{ticket.subject}}
+                            </b>
+                            <b>
+                                Created Date: {{ticket.createdDate | date: 'dd/MM/yyyy hh:mm:ss'}}
+                            </b>
 
                         </div>
                     </div>
@@ -30,12 +31,19 @@
                                         
                                     </div>
                                 </div>
-                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                                <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3" style="width: 50%;" >
+
                                     <div class="font-weight-bold mb-1">
                                         {{detail.appUser.firstName}} {{detail.appUser.lastName}}
                                     </div>
-                                    {{detail.content}}
-                                    <p>{{detail.createdDate | date: 'dd/MM/yyyy hh:mm:ss'}}</p>
+                                   
+                                    <p>
+                                        {{detail.createdDate | date: 'dd/MM/yyyy hh:mm:ss'}}
+                                    </p>
+
+                                    <p style="word-break: break-all; width:50%">
+                                        {{detail.content}}
+                                    </p>
                                 </div>
                             </div>
                             }
@@ -45,8 +53,8 @@
 
                     <div class="flex-grow-0 py-3 px-4 border-top">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Type your message">
-                            <button class="btn btn-primary">Send</button>
+                            <input [(ngModel)]="content" type="text" class="form-control" placeholder="Type your message">
+                            <button (click)="addDetailContent()" class="btn btn-primary">Send</button>
                         </div>
                     </div>
 
