--- a/ITDeskClient/src/app/components/home/home.component.html
+++ b/ITDeskClient/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="card mt-2">
-    <p-button (click)=" show()" label="Yeni Destek Talebi" icon="pi pi-plus"></p-button>
+    <p-button (click)=" show()" label="Create Support Request" icon="pi pi-plus"></p-button>
    
 </div>
 <div class="card mt-2">
