--- a/ITDeskClient/src/app/components/create/create.component.html
+++ b/ITDeskClient/src/app/components/create/create.component.html
@@ -1,5 +1,5 @@
 <div class="card flex justify-content-center">
-    <input pInputText placeholder="Konu" [(ngModel)]="subject" style="width: 100%;" />
+    <input pInputText placeholder="Subject" [(ngModel)]="subject" style="width: 100%;" />
 </div>
 
 <div class="card" style="margin-top: 30px;">
@@ -21,5 +21,5 @@
 </div>
 
 <div class="card">
-    <p-button (click)="create()" label="Oluştur" [style]="{width: '100%'}" icon="pi pi-plus" [raised]="true" severity="success"></p-button>
+    <p-button (click)="create()" label="Create" [style]="{width: '100%'}" icon="pi pi-plus" [raised]="true" severity="success"></p-button>
 </div>
