--- a/ITDeskClient/src/app/components/layout/layout.component.html
+++ b/ITDeskClient/src/app/components/layout/layout.component.html
@@ -1,12 +1,12 @@
 <div class="card">
-    <p-menubar [model]="items">
+ <p-menubar [model]="items" > 
         <ng-template pTemplate="start">
-            <img src="https://primefaces.org/cdn/primeng/images/primeng.svg" height="40" class="mr-2" />
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjI9peCDTagr07_cyMAfiUU7Yik1mnUrj4cQ&usqp=CAU" height="40" class="mr-2" />
         </ng-template>
         <ng-template pTemplate="end">
             <p-button [label]="auth.token.name" icon="pi pi-fw pi-power-off" [text]="true" severity="secondary" (click)="logout()"></p-button>
         </ng-template>
-    </p-menubar>
-</div>
+     </p-menubar>
+</div> 
 
 <router-outlet></router-outlet>
